add and edit inventory

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -251,7 +251,7 @@ a:hover {
 }
 
 .sidenav-toggle-button {
-  display: none;
+  /* display: none; */
   position: fixed;
   top: 1rem;
   left: 1rem;
